<resources>
    <string name="app_name">DroidAmp</string>

    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>

    <string name="invalid_name">El nombre es obligatorio.</string>
    <string name="invalid_surname">El apellido es obligatorio.</string>
    <string name="invalid_commission">La comisión ingresada no es válida.</string>
    <string name="invalid_dni">El DNI ingresado no es válido.</string>
    <string name="invalid_password">La contraseña tiene que tener al menos 8 caracteres.</string>
    <string name="invalid_email">El email ingresado no es válido.</string>
    <string name="invalid_email_or_pass">Email o contraseña incorrectos.</string>
    <string name="login_failed">"El inicio de sesión falló: "</string>

    <string name="register"><u>¿Todavía no estás registrado?</u></string>
    <string name="title_activity_register"><u>Registrarse</u></string>

    <string name="no_connection"><u>No hay conexión a internet.</u></string>


    <string name="welcome">"El porcentaje de carga de tu batería es: "</string>
    <string name="batteryMore">"La batería se encuentra: "</string>
    <string name="btnOkGenial">"Continuar a la App."</string>
    <string name="sharedPreferencesFile">com.unlam.droidAmp.sharedPref</string>
    <string name="yourAlbums">Tus álbumes</string>
    <string name="noAlbum">"DroidAmp no pudo encontrar ningún album. Asegurate de que tu dispositivo tenga al menos uno."</string>


</resources>
